
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int socklen_t ;


 int AF_INET ;
 int IPPROTO_SCTP ;
 int SCTP_GET_ASSOC_STATS ;
 int SOCK_STREAM ;
 int SOL_SCTP ;
 int getsockopt (int,int ,int ,char*,int *) ;
 int socket (int ,int ,int ) ;
 int strlen (char*) ;

int main(void)
{
 char *buf = "AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA";
 socklen_t len = strlen(buf);
 int fd;

 fd = socket(AF_INET, SOCK_STREAM, IPPROTO_SCTP);
 getsockopt(fd, SOL_SCTP, SCTP_GET_ASSOC_STATS, buf, &len);
 return 0;
}
